fixed font for links, aligned text

--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -1,26 +1,27 @@
 #aboutid{
     float: right;
-    padding: 20px;
-    margin-bottom: 20px;
-    color: gray;
+    padding: 35px;
+    margin-bottom: auto;
+    margin-right: 125px;
+    -webkit-text-fill-color: gray;
     font-family: Arial, 'Helvetica Neue', Helvetica, sans-serif;
     line-height: 1.6;
 }
 
 #portfolioid{
     float: right;
-    padding: 20px;
-    margin-bottom: 20px;
-    color: gray;
+    padding: 35px;
+    margin-bottom: auto;
+    -webkit-text-fill-color: gray;
     font-family: Arial, 'Helvetica Neue', Helvetica, sans-serif;
     line-height: 1.6;
 }
 
 #contactid{
     float: right;
-    padding: 20px;
-    margin-bottom: 20px;
-    color: gray;
+    padding: 35px;
+    margin-bottom: auto;
+    -webkit-text-fill-color: gray;
     font-family: Arial, 'Helvetica Neue', Helvetica, sans-serif;
     line-height: 1.6;
 }
@@ -34,6 +35,7 @@ h1{
     float: left;
     padding: 20px;
     margin-bottom: 20px;
+    margin-left: 150px;
     color: white;
     background-color: green;
 } 
@@ -66,7 +68,7 @@ p{
 
 #main{
     padding: 25px;
-    margin: 30px;
-    margin-top: auto;
+    margin: 150px;
+    margin-top: 50px;
     background: white;
 }
